Bug 868660 - Add missing check for media paused in inactive documents. r=roc